$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.093
~~~~~~~~~~~~~~~~~

   o new parameter type "Chord3" provides an alternative set of 108 chords.
     Thanks to EsotericLabs for providing the chord table!


MIDIboxSEQ V4.092
~~~~~~~~~~~~~~~~~

   o new parameter layers for track specific root note and scale

     Root selection strategy: if Root is assigned to any parameter 
     layer of a track, the layer can either select the global root 
     selection ("Glb") or set the root note for each step explicitely.

     The global root selection is configured in the FX->Scale page,
     it's either "Keyb" (for MIDI keyboard entry) or C, C#, ... B

     The local root selection is C, C#, ... B

     Notes and Chords will be transposed accordingly if the track is in
     Normal mode (and not in Transpose or Arpeggiator mode)

     Similar for Scale: it can override the globally configured scale
     of the FX->Scale page for each step.
     
   o new drum configurations: 4*16/2*64, 4*16/2*128, 4*16/1*256

   o new configuration option in Track Mode page: "Note Last/First"
     Allows to specify, if the transposer should take the last or first
     played note (previously it always played the last note)

   o new configuration option in Track Mode page: "STrg" (Step Trigger).
     If activated, the step progression will be controlled from the transposer
     bus, hence it can either be triggered from a loopback track or from an 
     external MIDI device (MIDI keyboard, sequencer, etc.)
     Note that each track can be assigned to a dedicated transpose bus
     (4 busses are available), this allows to control 4 independent step progressions
     for all 16 tracks.

   o individual steps of CC, PitchBender, Program Change and Aftertouch
     layers can now be disabled so that they won't play.
     Turn the encoder to the rightmost position (value 128)
